crates/tsuno-driver/tests/fixtures/snapshots/pass/assert_introduces_top_level_bindings.rs
fn main() {
    //@ let x = 4i32;
    //@ let y = x;
    //@ assert y == 4i32;
    //@ assert x == 4i32;
    //@ assert y == 4i32;
}
