crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_bare_rust_binding_in_assert.rs
fn main() {
    let x = 1_i32;
    //@ assert x == 1i32;
}
